--- a/AKboard/AKboard.xib
+++ b/AKboard/AKboard.xib
@@ -13,21 +13,13 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AKboardView" customModule="AKboard" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="AKboardView" customModule="AKboard" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="313" height="198"/>
+            <rect key="frame" x="0.0" y="0.0" width="313" height="160"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wLH-k1-L1u">
-                    <rect key="frame" x="0.0" y="0.0" width="313" height="198"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
-                </view>
-            </subviews>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <nil key="simulatedTopBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="-1300" y="-625.18740629685158"/>
+            <point key="canvasLocation" x="1284" y="-613"/>
         </view>
     </objects>
 </document>
